--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
       name="description"
       content="Vitalii Lushyn CV page, used technologies: React, tailwind"
     />
+    <meta
+      name="keywords"
+      content="Vitalii Lushyn, Frontend, Web Devolper, Programming, Portfolio, Web, HTML, HTML5, CSS, CSS3, Javascript, Bootstrap, Git, Github, React"
+    />
+    <link rel="icon" href="/icon.ico" />
     <title>Vitalii Lushyn page</title>
   </head>
   <body>
